@@ -89,7 +89,11 @@ UI
 --
 
 * Fix page banner in menu editor.
- 
+
+* Use <pre> ... </pre> instead of the obsolete <xmp> ... </xmp> element in the
+  test_code admin UI page when displaying in SOURCE mode.  Don't filter
+  entities when displaying in HTML mode.
+
 Standard demo
 -------------
 
